fixed image sizes

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             </div>
                         </div>
 
-                        <img src="img/portfolio/smart-fridge-app.jpg" class="img-responsive" alt="" width="">
+                        <img src="img/portfolio/smart-fridge-app.jpg" class="img-responsive" alt="" width="300">
                     </a>
                     <div class="portfolio-caption">
 
@@ -271,7 +271,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/hat.png" class="img-responsive" alt="" width="190">
+                        <img src="img/portfolio/hat.png" class="img-responsive" alt="" width="200">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Cook Helper Application</h4>
@@ -288,7 +288,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circle_dot.png" class="img-responsive" alt="" width="170">
+                        <img src="img/portfolio/circle_dot.png" class="img-responsive" alt="" width="200">
                     </a>
                     <div class="portfolio-caption">
                         <h4>"Circle the Dot"</h4>
@@ -326,7 +326,7 @@
                     <h2 class="section-heading">Volunteering & Experience</h2>
                     <h3 class="section-subheading text-muted">&lt / &gt</h3>
 
-                    
+
                     <h4 class="service-heading"> Engineering Faculty Council</h4>
                     <h6 class="service-heading">April 2016 – May 2017</h6>
                     <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. It’s a role I thoroughly enjoy and gives me much satisfaction as it has helped me with my communication and business skills. My hard working habits and organizational skills, help in balancing my school work, my extracurricular activities and my passion in computing.
