--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#education">Education</a>
+                        <a class="page-scroll" href="#other">Experience/Volunteering</a>
+
                     </li>
                     <li>
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#other">Volunteering/Experience</a>
+                        <a class="page-scroll" href="#education">Education</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -180,54 +181,49 @@
     </section>
 
 
-
-    <!-- Education Section -->
-    <section id="education">
+    <!-- Volunteering and experience Section -->
+    <section id="other">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Education</h2>
+                    <h2 class="section-heading">Experience & Volunteering</h2>
                     <h3 class="section-subheading text-muted">&lt / &gt</h3>
+
+                    <img src="img/logos/Nuance_Communications.png" class="img-responsive img-centered" alt="Nuance" width="150">
+
+                    <h4 class="service-heading"> Data Scientist Intern - Nuance Communications</h4>
+                    <h6 class="service-heading">June 2017 - August 2017</h6>
+                    <p class="text-muted"> I worked at Nuance Communications as a Data Scientist Intern during the Summer of 2017. 
+                        
+<!--        Update this with specific tasks of what I did
+                        My tasked included:
+
+                        <li class="text-left">dfdsdfdsfdsfsdfadfdffsfsfdsfffss
+                        </li>
+                        <li class="text-left">dfhkdfdfsfsdfsdfsdfsfsdfsdfsfsfsfsfsfdfsfsfs
+                        </li>
+-->
+
+                    </p>
+
+                    <h4 class="service-heading"> Engineering Faculty Council</h4>
+                    <h6 class="service-heading">April 2016 – May 2017</h6>
+                    <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. It’s a role I thoroughly enjoy and gives me much satisfaction as it has helped me with my communication and business skills. My hard working habits and organizational skills, help in balancing my school work, my extracurricular activities and my passion in computing.
+                    </p>
+
+                    <h4 class="service-heading"> Community Pillars</h4>
+                    <h6 class="service-heading">September 2016 – Present</h6>
+                    <p class="text-muted"> I organized and participated in weekly community service projects in the Ottawa area along with Chabad on Campus. </p>
+                    <h4 class="service-heading"> Entrepreneur</h4>
+                    <h6 class="service-heading">November 2012 – April 2013</h6>
+                    <p class="text-muted"> I bought and sold refurbished Apple laptops in bulk. I marketed, created ads and dealt with an array of clients. I employed a team of 5 salespeople. </p>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-lg-12">
-                    <span class="fa-stack fa-4x">
-                        <img src="img/logos/uottawa.png" class="img-responsive img-centered" alt="University of Ottawa">
-                    </span>
-                    <h4 class="service-heading">University of Ottawa</h4>
-                    <h6 class="service-heading">2014 - Present</h6>
-                    <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.33/4.00.</p>
-                    <p class="text-muted">
-                        <a href="#other"> Elected member of the Engineering Faculty Council.</a>
-                    </p>
-                    <p class="text-muted">
-                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Intro to Software Engineering, Discrete Math, Discrete Stuctures, Computer Architecture, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
-                    </p>
-                    <p class="text-muted">
-                        Selected Business Coursework: New Venture Creation, Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour
-                    </p>
-                </div>
-                <div class="col-lg-12">
-                    <span class="fa-stack fa-4x">
-                         <img src="img/logos/mario.jpeg" class="img-responsive img-centered" alt="Marianopolis College">
-                    </span>
-                    <h4 class="service-heading">Marianopolis College</h4>
-                    <h6 class="service-heading">2012 - 2014</h6>
-                    <p class="text-muted">DEC of Commerce</p>
-                    <p class="text-muted">Selected Coursework: Macroeconomics, International Business, Spanish</p>
-                </div>
-                <div class="col-lg-12">
-                    <span class="fa-stack fa-4x">
-                        <img src="img/logos/Herzliah.jpg" class="img-responsive img-centered" alt="Herzliah High School">
-                    </span>
-                    <h4 class="service-heading">Herzliah High School</h4>
-                    <h6 class="service-heading">2006 - 2011</h6>
-                    <p class="text-muted">Graduated with Honours. I received a full tuition scholarship to the Hebrew University of Jerusalem.</p>
-                </div>
             </div>
         </div>
     </section>
+
 
 
 
@@ -318,32 +314,57 @@
 
 
 
-    <!-- Volunteering and experience Section -->
-    <section id="other">
+
+
+
+    <!-- Education Section -->
+    <section id="education">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Volunteering & Experience</h2>
+                    <h2 class="section-heading">Education</h2>
                     <h3 class="section-subheading text-muted">&lt / &gt</h3>
-
-
-                    <h4 class="service-heading"> Engineering Faculty Council</h4>
-                    <h6 class="service-heading">April 2016 – May 2017</h6>
-                    <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. It’s a role I thoroughly enjoy and gives me much satisfaction as it has helped me with my communication and business skills. My hard working habits and organizational skills, help in balancing my school work, my extracurricular activities and my passion in computing.
-                    </p>
-
-                    <h4 class="service-heading"> Community Pillars</h4>
-                    <h6 class="service-heading">September 2016 – Present</h6>
-                    <p class="text-muted"> I organized and participated in weekly community service projects in the Ottawa area along with Chabad on Campus. </p>
-                    <h4 class="service-heading"> Entrepreneur</h4>
-                    <h6 class="service-heading">November 2012 – April 2013</h6>
-                    <p class="text-muted"> I bought and sold refurbished Apple laptops in bulk. I marketed, created ads and dealt with an array of clients. I employed a team of 5 salespeople. </p>
                 </div>
             </div>
             <div class="row text-center">
+                <div class="col-lg-12">
+                    <span class="fa-stack fa-4x">
+                        <img src="img/logos/uottawa.png" class="img-responsive img-centered" alt="University of Ottawa">
+                    </span>
+                    <h4 class="service-heading">University of Ottawa</h4>
+                    <h6 class="service-heading">2014 - Present</h6>
+                    <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.33/4.00.</p>
+                    <p class="text-muted">
+                        <a href="#other"> Elected member of the Engineering Faculty Council.</a>
+                    </p>
+                    <p class="text-muted">
+                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Intro to Software Engineering, Discrete Math, Discrete Stuctures, Computer Architecture, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
+                    </p>
+                    <p class="text-muted">
+                        Selected Business Coursework: New Venture Creation, Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour
+                    </p>
+                </div>
+                <div class="col-lg-12">
+                    <span class="fa-stack fa-4x">
+                         <img src="img/logos/mario.jpeg" class="img-responsive img-centered" alt="Marianopolis College">
+                    </span>
+                    <h4 class="service-heading">Marianopolis College</h4>
+                    <h6 class="service-heading">2012 - 2014</h6>
+                    <p class="text-muted">DEC of Commerce</p>
+                    <p class="text-muted">Selected Coursework: Macroeconomics, International Business, Spanish</p>
+                </div>
+                <div class="col-lg-12">
+                    <span class="fa-stack fa-4x">
+                        <img src="img/logos/Herzliah.jpg" class="img-responsive img-centered" alt="Herzliah High School">
+                    </span>
+                    <h4 class="service-heading">Herzliah High School</h4>
+                    <h6 class="service-heading">2006 - 2011</h6>
+                    <p class="text-muted">Graduated with Honours. I received a full tuition scholarship to the Hebrew University of Jerusalem.</p>
+                </div>
             </div>
         </div>
     </section>
+
 
 
 
