Reformated about me and added skills

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
     <!-- About Section -->
-    <section id="about" class="bg-light-gray">
+        <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -103,11 +103,11 @@
                                 <img class="img-circle img-responsive" src="img/about/cirlcesme.png" alt="">
                             </div>
                             <div class="timeline-panel">
-                                <div class="timeline-heading">
+                                <div class="timeline-heading text-center">
                                     <h4>Hello World</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Welcome to my website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
+                                    <p class="text-muted text-left">Welcome to my website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
                                     <br>
                                     <p class="text-muted">(You can find me on <a href="https://github.com/flsing/"> Github</a>, <a href="https://www.linkedin.com/in/felix-singerman/"> LinkedIn</a>, <a href="https://facebook.com/flsingerman">Facebook</a>, <a href="https://stackoverflow.com/users/7371879/felix"> Stack Overflow</a>)</p>
                                 </div>
@@ -127,7 +127,7 @@
                                 </div>
                                 <h5 class="subheading">Technologies/Environment</h5>
                                 <div class="timeline-body">
-                                    <p class="text-muted">UNIX/Linux, MAC OS, Windows, PostgreSQL, Flask, UML, Data Structures, Git, Bootstrap</p>
+                                    <p class="text-muted">UNIX/Linux, MAC OS, PostgreSQL, Lucene, Solr, Anaconda Python, Flask, UML, Git, Bootstrap</p>
                                 </div>
                             </div>
                         </li>
@@ -136,32 +136,14 @@
                                 <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Natural Languages</h4>
+                                <div class="timeline-heading text-center">
+                                    <h4>Other Interests</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">
-                                        <Strong>English: </Strong>Native proficiency</p>
-                                    <p class="text-muted"><strong>French:</strong> Professional working proficiency</p>
-                                    <p class="text-muted">
-                                        <Strong>Hebrew: </Strong>Elementary proficiency</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>other interests</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">
-                                        My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learning.</p><br>
-                                    <ul class="text-muted">
-                                        <li>I enjoy educating myself on current events and learning about what is going on around the world.</li>
-                                        <li>I am currently teaching myself how to play the saxophone. </li>
+                                    <p class="text-muted text-left">My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learning.</p><br>
+                                    <ul class="text-muted text-left">
+                                        <li class="text-left">I enjoy educating myself on current events and learning about what is going on around the world.</li>
+                                        <li class = "text-left">I am currently teaching myself how to play the saxophone. </li>
                                     </ul>
                                 </div>
                             </div>
