--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
     <!-- About Section -->
-        <section id="about" class="bg-light-gray">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -143,8 +143,22 @@
                                     <p class="text-muted text-left">My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learning.</p><br>
                                     <ul class="text-muted text-left">
                                         <li class="text-left">I enjoy educating myself on current events and learning about what is going on around the world.</li>
-                                        <li class = "text-left">I am currently teaching myself how to play the saxophone. </li>
+                                        <li class="text-left">I am currently teaching myself how to play the saxophone. </li>
                                     </ul>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+
                                 </div>
                             </div>
                         </li>
@@ -175,9 +189,9 @@
 
                     <h4 class="service-heading"> Data Scientist Intern - Nuance Communications</h4>
                     <h6 class="service-heading">June 2017 - August 2017</h6>
-                    <p class="text-muted"> I worked at Nuance Communications as a Data Scientist Intern during the Summer of 2017. 
-                        
-<!--        Update this with specific tasks of what I did
+                    <p class="text-muted"> I worked at Nuance Communications as a Data Scientist Intern during the Summer of 2017.
+
+                        <!--        Update this with specific tasks of what I did
                         My tasked included:
 
                         <li class="text-left">dfdsdfdsfdsfsdfadfdffsfsfdsfffss
