--- a/index.html
+++ b/index.html
@@ -657,6 +657,9 @@
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
+    
+    <!-- Konami Cheat Code -->
+    <script src="js/konami.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
