fix placement of popover

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#0" data-toggle="popover" data-trigger="focus"  data-content="Still Under Construction">FR</a>
+                        <a class="page-scroll" href="#0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="Still Under Construction">FR</a>
 
                         <!--<a class="language" href="index-fr.html" >FR</a>-->
                     </li>
@@ -674,6 +674,7 @@
         $(document).ready(function() {
             $('[data-toggle="popover"]').popover();
         });
+
     </script>
 
     <!-- Google Analytics -->
@@ -692,6 +693,7 @@
 
         ga('create', 'UA-97389856-1', 'auto');
         ga('send', 'pageview');
+
     </script>
 
 </body>
