minor bug fixes, added courses

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="navbar-brand page-scroll" href="#page-top">Felix J Singerman</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- nav links -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
@@ -68,14 +68,13 @@
                     <li>
                         <a class="page-scroll" href="#0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="Still Under Construction">FR</a>
 
-                        <!--<a class="language" href="index-fr.html" >FR</a>-->
+                        <!-- TODO: <a class="language" href="index-fr.html" >FR</a>-->
                     </li>
                 </ul>
 
             </div>
             <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>
 
 
@@ -196,14 +195,13 @@
                     <h6 class="service-heading">June 2017 - August 2017</h6>
                     <p class="text-muted"> I worked at Nuance Communications as a Data Scientist Intern during the Summer of 2017.
 
-                        <!--        Update this with specific tasks of what I did
+                        <!--       TODO: Update this with specific tasks of what I did
                         My tasked included:
 
                         <li class="text-left">dfdsdfdsfdsfsdfadfdffsfsfdsfffss
                         </li>
                         <li class="text-left">dfhkdfdfsfsdfsdfsdfsfsdfsdfsfsfsfsfsfdfsfsfs
-                        </li>
--->
+                        </li> -->
 
                     </p>
 
@@ -308,7 +306,7 @@
                     </div>
                 </div>
 
-
+                <!-- TODO: need to fix the placement for this -->
 
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
@@ -354,7 +352,7 @@
                         <a href="#other"> Elected member of the Engineering Faculty Council.</a>
                     </p>
                     <p class="text-muted">
-                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Intro to Software Engineering, Discrete Math, Discrete Stuctures, Computer Architecture, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
+                        Selected Coursework: Data Structures and Algorithms, Databases, Discrete Math, Discrete Stuctures, Design & Analysis of Algorithms, Programming Language Concepts, Programming Paradigms, Intro to Software Engineering, Computer Architecture, Intro to Computing I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
                     </p>
                     <p class="text-muted">
                         Selected Business Coursework: New Venture Creation, Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour
@@ -383,6 +381,7 @@
 
 
     <!-- Contact Section -->
+    <!-- TODO: maybe delete/hide this for now? -->
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -430,7 +429,7 @@
     </section>
 
 
-    <!-- Footer section uncover -->
+    <!-- Footer section -->
     <footer class="bg-light-gray ">
         <div class="container">
             <div class="row">
@@ -476,7 +475,6 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <!-- Project Details Go Here -->
                                 <h2>Smart Fridge</h2>
                                 <p class="item-intro text-muted">Smart Refrigerator System</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/smart-fridge.png" alt="">
@@ -547,7 +545,6 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <!-- Project Details Go Here -->
                                 <h2>Circle the Dot game</h2>
                                 <p class="item-intro text-muted">Built in Java</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/circle_dot.png" alt="">
@@ -584,7 +581,6 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <!-- Project Details Go Here -->
                                 <h2>My Personal Website</h2>
                                 <p class="item-intro text-muted">My Website</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/website.png" alt="">
@@ -622,7 +618,6 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <!-- Project Details Go Here -->
                                 <h2>Huffman Coding Algorithm</h2>
                                 <p class="item-intro text-muted">Data Structures and Algorithms</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/HUffman.png" alt="">
@@ -653,7 +648,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
+    <!-- TODO: hide this? Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
